# FireRedASR2S

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-asr-no-torch.txt  requirements-dev.txt
docs/: AEC_INTEGRATION_BOUNDARY.md  ASR_FEATURE_MATRIX.md  FEATURE_E2E_TESTS.md  MICROPHONE_ASR_INTEGRATION.md  PARTIAL_STREAMING_ASR.md  RUNTIMES.md  STREAMING_FULL_DUPLEX_CONTRACT.md  TEST_REPORT_GUIDE.md  WINDOWS_INFERENCE_SPEED.md
examples/: duplex_scripted_engine.py  full_duplex_mic_tts_demo.py  full_duplex_rich_call_llm_sim.py  full_duplex_scripted_rich.py  full_duplex_simulate_from_wav.py  full_duplex_voice_llm_tts.py  mic_stream_to_asr.py  rich_call_memory_context.py  stdio_utf8_windows.py  streaming_simulate_from_wav.py  test_api_asr.py  test_api_readme_modules.py  test_long_multi_speaker.py
fireredasr2s/: __init__.py  fireredasr2s_cli.py  fireredasr2system.py  full_duplex_stream.py  logging_config.py  repo_dotenv.py  stream_session.py  torch_device.py  win_console_utf8.py
reports/: env.json  test_report.html  test_report.md
scripts/: _report_writer.py  eval_diarization.py  generate_test_fixtures.py  install_intel_xpu_pytorch.ps1  logged_duplex_voice_llm_tts.py  powershell_utf8_init.ps1  prepare_duplex_scenario_wavs.py  prepare_rich_call_scenario_wavs.py  process_wav_asr_male_slices.py  quantize_aed_int8.py  run_campplus_diar_wav.py  run_full_duplex_voice_llm_tts_logged.ps1  run_full_test_matrix.py  run_rich_call_conversation_e2e.py  run_rich_call_scenario_matrix.py  run_vllm_llm_asr.sh
tests/: conftest.py  test_itn.py  (+19 more)
(+51 files in other folders)
