[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireredasr2s"
version = "0.0.1"
description = "Industrial-grade ASR system with VAD, LID, and punctuation prediction"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "transformers==5.1.0",
    "numpy==2.4.2",
    "cn2an==0.5.23",
    "kaldiio==2.18.1",
    "sentencepiece==0.2.1",
    "soundfile==0.13.1",
    "textgrid==1.6.1",
]

[project.optional-dependencies]
# `datasets` pulls `pyarrow`; on some Windows + GPU stacks an incompatible pyarrow wheel may
# fault at import — pin pyarrow or use WSL/Linux if CAM++ diar pipeline fails to load.
modelscope = [
    "modelscope",
    "addict",
    "datasets",
    "simplejson",
    "sortedcontainers",
    "scikit-learn",
    "hdbscan",
    "umap-learn",
]

mic = [
    "sounddevice>=0.5.0",
]

# Full-duplex mic + TTS demo (``examples/full_duplex_mic_tts_demo.py``): sounddevice + local TTS.
# Edge-TTS path additionally needs ``ffmpeg`` on PATH and ``pip install edge-tts``.
duplex = [
    "sounddevice>=0.5.0",
    "pyttsx3>=2.90",
]

[project.scripts]
fireredasr2s-cli = "fireredasr2s.fireredasr2s_cli:cli_main"

[tool.setuptools.packages.find]
include = ["fireredasr2s*"]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
